--- a/index.html
+++ b/index.html
@@ -58,15 +58,17 @@
         }
 
         footer {
-            margin-top: 40px;
+            margin-top: 50px;
             padding-top: 30px;
-            border-top: 1px solid rgba(44, 62, 80, 0.1);
+            border-top: 2px solid #e0e0e0;
+            color: #666;
+            font-size: 0.9rem;
         }
 
         footer a {
             color: #2c3e50;
             text-decoration: none;
-            font-size: 1.1rem;
+            font-size: 1rem;
             font-weight: 500;
             transition: color 0.3s ease;
         }
@@ -117,7 +119,7 @@
         </main>
 
         <footer>
-            <a href="mailto:contact@turnthevolumeup.org">contact@turnthevolumeup.org</a>
+            email: <a href="mailto:contact@turnthevolumeup.org">contact@turnthevolumeup.org</a>
         </footer>
     </div>
 </body>
