--- a/index.html
+++ b/index.html
@@ -3,8 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turn The Volume Up</title>
+    <title>Turn The Volume Up - Zohran Mamdani NYC Mayor-Elect</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Turn The Volume Up - Supporting Zohran Mamdani, Mayor-Elect of New York City. A call for bold, progressive leadership in NYC.">
+    <meta name="keywords" content="Zohran Mamdani, NYC Mayor, New York City Mayor, Turn The Volume Up, progressive politics, NYC leadership">
+    <meta name="author" content="Turn The Volume Up">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://turnthevolumeup.org/">
+    <meta property="og:title" content="Turn The Volume Up - Zohran Mamdani NYC Mayor-Elect">
+    <meta property="og:description" content="Supporting Zohran Mamdani, Mayor-Elect of New York City. Turn the volume up on progressive leadership.">
+    <meta property="og:site_name" content="Turn The Volume Up">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://turnthevolumeup.org/">
+    <meta name="twitter:title" content="Turn The Volume Up - Zohran Mamdani NYC Mayor-Elect">
+    <meta name="twitter:description" content="Supporting Zohran Mamdani, Mayor-Elect of New York City. Turn the volume up on progressive leadership.">
+
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>📢</text></svg>">
+    <link rel="canonical" href="https://turnthevolumeup.org/">
+
     <style>
         * {
             margin: 0;
