--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>📢</text></svg>">
     <link rel="canonical" href="https://turnthevolumeup.org/">
+    <link rel="author" href="humans.txt">
 
     <style>
         * {
