--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
             min-height: 300px;
         }
 
+        .spotify-container {
+            margin: 30px 0 20px 0;
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
         .twitter-tweet {
             margin: 0 auto !important;
         }
@@ -137,6 +144,10 @@
                     <a href="https://twitter.com/Razarumi/status/1985934167775817932?ref_src=twsrc%5Etfw">November 5, 2025</a>
                 </blockquote>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+
+            <div class="spotify-container">
+                <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/4BRypIAenkFAReVqxixGrF?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </main>
 
