--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
     <link rel="canonical" href="https://turnthevolumeup.org/">
     <link rel="author" href="humans.txt">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8E7TQDJLRR"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-8E7TQDJLRR');
+    </script>
+
     <style>
         * {
             margin: 0;
