--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <meta property="og:url" content="https://turnthevolumeup.org/">
     <meta property="og:title" content="Turn The Volume Up - Zohran Mamdani NYC Mayor-Elect">
     <meta property="og:description" content="Supporting Zohran Mamdani, Mayor-Elect of New York City. Turn the volume up on progressive leadership.">
+    <meta property="og:image" content="https://turnthevolumeup.org/og.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Turn The Volume Up">
 
     <!-- Twitter -->
@@ -22,6 +25,7 @@
     <meta name="twitter:url" content="https://turnthevolumeup.org/">
     <meta name="twitter:title" content="Turn The Volume Up - Zohran Mamdani NYC Mayor-Elect">
     <meta name="twitter:description" content="Supporting Zohran Mamdani, Mayor-Elect of New York City. Turn the volume up on progressive leadership.">
+    <meta name="twitter:image" content="https://turnthevolumeup.org/og.png">
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>📢</text></svg>">
     <link rel="canonical" href="https://turnthevolumeup.org/">
