swap yt for spotify for full song playback functionality

--- a/index.html
+++ b/index.html
@@ -191,11 +191,7 @@
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
 
-            <div class="spotify-container">
-                <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/4BRypIAenkFAReVqxixGrF?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            </div>
-        </main>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/lD91CxCo8-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <footer>
             <div class="footer-actions">
                 <a class="donate-btn" href="https://secure.actblue.com/donate/zohran-mamdani-transition-1/" target="_blank" rel="noopener noreferrer">Donate</a>
