Update footer contact email format

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <a class="donate-btn" href="https://secure.actblue.com/donate/zohran-mamdani-transition-1/" target="_blank" rel="noopener noreferrer">Donate</a>
             </div>
 
-            <div class="footer-contact">email: <a href="mailto:contact@turnthevolumeup.org">contact@turnthevolumeup.org</a></div>
+            <div class="footer-contact">email: contact🌀turnthevolumeup.org</div>
         </footer>
     </div>
 </body>
